Fix problems found in code inspection